# too-funky

./: .gitignore  Cargo.toml  LICENSE.md  Makefile  Makefile.toml  README.md  Xargo.toml  config.mk  grub.cfg  i686-unknown-funky.json  linker.ld  x86-unknown-funky.json
src/: kernel.rs  macros.rs  main.rs  panic.rs
src/arch/x86/: cpuid.rs  mod.rs
src/arch/x86/boot/: boot.asm  gdt.asm  mboot.asm  paging.asm
src/arch/x86/interrupt/: exceptions.rs  macros.rs  mod.rs
src/arch/x86/interrupt/idt/: entry.rs  mod.rs
src/arch/x86/paging/: addr.rs
src/arch/x86/paging/table/: entry.rs  mod.rs
src/arch/x86/segmentation/: mod.rs
src/arch/x86/segmentation/gdt/: entry.rs  mod.rs
src/drivers/: keyboard.rs  mod.rs  pic.rs  vga.rs
src/drivers/keyboard/: keyboard.rs  keycode.rs  mod.rs  scancode.rs
src/drivers/pic/: mod.rs
src/drivers/vga/: mod.rs
src/interrupt/: exceptions.rs  macros.rs  mod.rs  pic.rs
src/interrupt/idt/: entry.rs  mod.rs
src/mem/: frame.rs  mod.rs  page.rs
src/paging/: addr.rs  mod.rs
src/paging/table/: entry.rs  mod.rs
src/port/: mod.rs
src/segmentation/: mod.rs
src/segmentation/gdt/: entry.rs  mod.rs
src/syscall/: mod.rs
