[package]
name = "too-funky"
version = "0.0.1"
authors = ["Szymon Walter <walter.szymon.98@gmail.com>"]
publish = false

[lib]
name = "k"
path = "src/kernel.rs"
crate-type = ['staticlib']

[dependencies]
rlibc = "1.0"
x86 = "0.8"
spin = "0.4"
bitflags = "1.0"
bit_field = "0.9"
multiboot2 = "0.5"
linked_list_allocator = "0.5"
once = "0.3"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
